[gd_scene load_steps=2 format=3 uid="uid://bqm3k5h8tn9vl"]

[ext_resource type="Script" path="res://scripts/miku_fragment_bar.gd" id="1_fragment_bar"]

[node name="MikuFragmentBar" type="PanelContainer"]
custom_minimum_size = Vector2(400, 60)
offset_right = 400.0
offset_bottom = 60.0
script = ExtResource("1_fragment_bar")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IconLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "ðŸ’™"

[node name="SlotsContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CountLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Miku Fragments: 0/5"
